# IMP_Sample

./: CMakeLists.txt  Main.qml  Other.qml  README.md  Test2.qml  main.cpp  qml.qrc  test.cpp  test.h
qml/: CMakeLists.txt  CameraView.qml  Main.qml  PhotoView.qml
src/: CMakeLists.txt  database.h  filter.cpp  filter.h  interface.cpp  interface.h  test2.h
